# rust_web

chapter_01/minimal_reqwest/: Cargo.toml
chapter_01/minimal_reqwest/src/: main.rs
chapter_01/minimal_tcp/: Cargo.toml
chapter_01/minimal_tcp/src/: main.rs
chapter_01/minimal_warp/: Cargo.toml
chapter_02/: Cargo.toml
chapter_02/src/: main.rs
chapter_03/: Cargo.toml
chapter_03/src/: main.rs
chapter_04/: Cargo.toml
chapter_04/src/: main.rs
chapter_05/: Cargo.toml
chapter_05/handle-errors/: Cargo.toml
chapter_05/handle-errors/src/: lib.rs
chapter_05/src/: main.rs  store.rs
chapter_05/src/routes/: question.rs
chapter_06/: Cargo.toml  log4rs.yaml
chapter_06/src/: main.rs
chapter_07/: Cargo.toml  questions.json
chapter_07/handle-errors/: Cargo.toml
chapter_07/handle-errors/src/: lib.rs
chapter_07/src/: main.rs  store.rs
chapter_07/src/routes/: answer.rs  question.rs
chapter_07/src/types/: question.rs
chapter_08/: Cargo.toml
chapter_08/chapter_08_hyper/: Cargo.toml
chapter_08/chapter_08_reqwest/: Cargo.toml
chapter_08/handle-errors/: Cargo.toml
chapter_08/src/: main.rs  profanity.rs
chapter_09/: Cargo.toml
chapter_09/migrations/: 20250818051833_create_accounts_table.up.sql
chapter_09/src/: main.rs  profanity.rs
chapter_10/: .env  Cargo.toml  Dockerfile  build.rs  docker-compose.yml  setup.toml
chapter_10/handle-errors/: Cargo.toml
chapter_10/handle-errors/src/: lib.rs
chapter_10/src/: config.rs  main.rs  main2.rs  profanity.rs  store.rs
chapter_10/src/routes/: authentication.rs  question.rs
(+13 files in other folders)
