[package]
name = "chapter_07"
version = "0.1.0"
edition = "2024"

[dependencies]
syn = "1"
handle-errors = { path = "handle-errors" }
tokio = { version = "1.2", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "migrate", "postgres"] }

[build-dependencies]
syn = "1"
