[package]
name = "chapter_10"
version = "1.0.0"
edition = "2024"

[dependencies]
syn = "1"
handle-errors = { path = "handle-errors" }
tokio = { version = "1.2", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "migrate", "postgres"] }
reqwest = { version = "0.11", features = ["json"] }
reqwest-middleware = "0.1.1"
reqwest-retry = "0.1.1"
rand = "0.8"
rust-argon2 = "1.0"
paseto = "2.0"
chrono = "0.4.19"
config = { version = "0.13.1", features = ["toml"]}
clap = { version = "3.1.7", features = ["derive"] }
proc-macro2 = "1.0.37"
dotenv = "0.15.0"

[build-dependencies]
syn = "1"
platforms = "2.0.0"